themes/shoka/source/css/_common/outline/sidebar/author.styl
.overview .author {

  &:hover .image {
    @extend .shake;
  }

  .image {
    border: .0625rem solid var(--body-bg-shadow);
    display: block;
    margin: 0 auto;
    max-width: 10rem;
    padding: .125rem;
    box-shadow: 0 0rem 1rem .625rem var(--body-bg-shadow);
    border-radius: 50%;
  }


  .name {
    color: var(--grey-7);
    font-weight: normal;
    margin: .3125rem 0 0;
    text-align: center;
  }

  .description {
    color: var(--grey-5);
    font-size: $font-size-medium;
    margin-top: .3125rem;
    text-align: center;
  }
}

@keyframes shake {
  0% {
    transform: scale(1);
  }

  10%,
  20% {
    transform: scale(.9) rotate(3deg);
  }

  30%,
  50%,
  70%,
  90% {
    transform: scale(1.1) rotate(-3deg);
  }

  40%,
  60%,
  80% {
    transform: scale(1.1) rotate(3deg);
  }

  100% {
    transform: scale(1);
  }
}

